# wholesale_platform

./: .flake8  .gitignore  README.md  build.sh  docker-compose.yaml  run.sh
backend/admin/src/: main.py
backend/admin/src/database/: models.py
backend/admin/src/handlers/: registration.py
backend/admin/src/tests/: conftest.py  test_registration.py
backend/admin_app/: .dockerignore  Dockerfile  build.sh  requirements.txt  run.sh  run_tests.sh
backend/admin_app/src/: app_setup.py  globals.py  main.py  run.py  string_constants.py
backend/admin_app/src/api_walker/: api_walker.py
backend/admin_app/src/api_walker_client/: api_walker_pb2.py
backend/admin_app/src/assets/: admin_confirmation_email.html  confirmation_notification_email.html  confirmation_page.html  email_confirmation_email.html
backend/admin_app/src/database/: database_setup.py  (+1 more)
backend/admin_app/tests/: conftest.py  test_registration.py
backend/admin_db/: setup.sql
backend/api_walker/: CMakeLists.txt  Dockerfile  build.sh
backend/api_walker/protos/: api_walker.proto
backend/api_walker/src/: main.cpp
backend/api_walker/src/server/: server.cpp  server.hpp
backend/api_walker/src/server/proto/: api_walker.pb.cc  api_walker.pb.h
backend/central/src/: main.py  run.py
frontend/admin-app/: README.md  package.json
frontend/admin-app/src/: App.vue  router.js
frontend/admin_app/: Dockerfile  README.md  build.sh  index.html  package.json  run.sh
frontend/admin_app/src/: App.vue  __VLS_template.js  lightml_parser.py  main.js  router.js
frontend/admin_app_old/src/: App.vue  router.js
(+24 files in other folders)
